Fix page content overflow browser window

--- a/src/components/layout/CompanyClaim/CompanyClaim.module.scss
+++ b/src/components/layout/CompanyClaim/CompanyClaim.module.scss
@@ -66,7 +66,7 @@
       position: relative;
       color: $cart-text;
       @include tablet {
-        margin-right: 10px;
+        margin-right: 30px;
       }
 
       .cartIcon {
